# ParticleSwarmOptimization

./: .gitignore  CMakeLists.txt  README.md  SwarmSearch.cpp  SwarmSearch.hpp  main  main.cpp  main2.c  notes.md  particle.cpp  particle.hpp
SwarmSearch/: Description_SwarmOptimization.odt
data/: particle_0_pos.csv  particle_1_pos.csv  particle_2_pos.csv
include/: Functions.hpp  ObjectiveFunction.hpp  PSO.hpp  Particle.hpp  Swarm.hpp  Visual.hpp  swarmfct.hpp
personal_implementation/: oopmain.cpp  serial_swarm  serial_swarm.cpp
personal_implementation/oo_pso/: PSO.cpp  PSO.hpp  Particle.cpp  Particle.hpp  main  main.cpp
src/: ObjectiveFunction.cpp  PSO.cpp  PSOSerial.cpp  Particle.cpp  Swarm.cpp  Visual.cpp  main.cpp  main2.cpp  swarmfct.cpp
visualization/: Visualizer.py
